@startuml 
hide circle
skinparam classAttributeIconSize 0
skinparam linetype ortho

class APIGateway {
}

class UserController{
    - _repo: IUserRepositories
    + CreateProfile([FromBody] CreateProfileRequestDTO request): Task<IActionResult>
}

interface IUserRepositories<<interface>> {
    + CreateUser(CreateProfileRequestDTO request, string token): Task<GetUserResponeDTO>
}

class UserRepositories {
    - _dao: UserDAO
    + CreateUser(CreateProfileRequestDTO request, string token): Task<GetUserResponeDTO>
}

class UserDAO {
    - _client.From<Profile>: ISupabaseTable<Profile>
    + CreateUser(CreateProfileRequestDTO request, string token): Task<GetUserResponeDTO>
}

class Profile {
    + Id: Guid
    + FullName: string
    + ProfilePicture: string
    + Bio: string
    + DateOfBirth: DateTime
    + CreatedAt: DateTime
    + UpdatedAt: DateTime
    + Role: string
    + AccountId: Guid
}

APIGateway -- UserController
UserController -- IUserRepositories 
IUserRepositories <|-- UserRepositories
UserRepositories "1"--"1..*" UserDAO
UserDAO "1"--"0..*" Profile

@enduml